各個功能新增測試完成，前端已修改到可以接到資料並呈現畫面

--- a/demo/src/main/resources/static/product/backend_productUpdate.html
+++ b/demo/src/main/resources/static/product/backend_productUpdate.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- 引入bootstrap套件CSS -->
-<link rel="stylesheet" href="/ski/css/bootstrap.css" />
-<link rel="stylesheet" href="/ski/css/root.css" />
-<link rel="stylesheet" href="/ski/css/Product/productAdd.css">
+<link rel="stylesheet" href="../css/bootstrap.css" />
+<link rel="stylesheet" href="../css/root.css" />
+<link rel="stylesheet" href="../css/Product/productAdd.css">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -257,7 +257,7 @@
 	</div>
 	</div>
 	<!-- 引入bootstrap套件JS -->
-	<script src="/ski/js/bootstrap.bundle.js"></script>
-	<script src="/ski/js/Product/productUpdate.js"></script>
+	<script src="../js/bootstrap.bundle.js"></script>
+	<script src="../js/Product/productUpdate.js"></script>
 </body>
 </html>
