--- a/demo/src/main/resources/static/product/frontend_productDetail.html
+++ b/demo/src/main/resources/static/product/frontend_productDetail.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- 引入bootstrap套件CSS -->
-<link rel="stylesheet" href="/ski/css/bootstrap.css" />
-<link rel="stylesheet" href="/ski/css/root.css" />
-<link rel="stylesheet" href="/ski/css/Product/frontend_productDetail.css" />
+<link rel="stylesheet" href="../css/bootstrap.css" />
+<link rel="stylesheet" href="../css/root.css" />
+<link rel="stylesheet" href="../css/Product/frontend_productDetail.css" />
 <title>商品頁面</title>
 </head>
 
@@ -16,7 +16,7 @@
 		class="navbar navbar-expand-lg navbar-dark border border-dark bg-dark">
 		<div class="container">
 			<a class="navbar-brand" href="index.html"> <img
-				src="/ski/img/logo.png" alt="UI Kit" style="width: 50px" />
+				src="../img/logo.png" alt="UI Kit" style="width: 50px" />
 			</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
@@ -74,7 +74,7 @@
 						<nav aria-label="breadcrumb">
 							<ol class="breadcrumb justify-content-center my-3">
 								<li class="breadcrumb-item"><a
-									href="http://localhost:8080/ski/product/frontend_shop.html">
+									href="http://localhost:8080/product/frontend_shop.html">
 										<button class="btn btn-primary"
 											style="background-image: url('path_to_button_image.png'); filter: grayscale(100%); background-size: cover;">
 											商城首頁</button>
@@ -152,17 +152,17 @@
 			<!-- 聊天室 -->
 			<button type="button"
 				class="sidetool_button btn btn-outline-black mb-1">
-				<img class="sidetool_icon" src="/ski/img/chat.png" alt="#" />
+				<img class="sidetool_icon" src="../img/chat.png" alt="#" />
 			</button>
 			<!-- 客服 -->
 			<button type="button"
 				class="sidetool_button btn btn-outline-black mb-1">
-				<img class="sidetool_icon" src="/ski/img/service.png" alt="#" />
+				<img class="sidetool_icon" src="../img/service.png" alt="#" />
 			</button>
 			<!-- 返回頂端 -->
 			<button type="button" id="return_top_button"
 				class="sidetool_button btn btn-outline-black mb-1">
-				<img class="sidetool_icon" src="/ski/img/up_arrow.png" alt="#" />
+				<img class="sidetool_icon" src="../img/up_arrow.png" alt="#" />
 			</button>
 		</div>
 	</div>
@@ -173,7 +173,7 @@
 			<div class="row">
 				<div class="col-1 d-flex align-items-center">
 					<a class="navbar-brand" href="index.html"> <img
-						src="/ski/img/logo.png" style="width: 50px" />
+						src="../img/logo.png" style="width: 50px" />
 					</a>
 				</div>
 				<div class="col-7 d-flex align-items-center">
@@ -197,8 +197,8 @@
 	</footer>
 </body>
 <!-- 引入bootstrap套件JS -->
-<script src="/ski/js/bootstrap.bundle.js"></script>
-<script src="/ski/js/frontend_public.js"></script>
-<script src="/ski/js/Product/productDetail.js"></script>
+<script src="../js/bootstrap.bundle.js"></script>
+<script src="../js/frontend_public.js"></script>
+<script src="../js/Product/productDetail.js"></script>
 </html>
 
