--- a/demo/src/main/resources/static/product/backend_productPut.html
+++ b/demo/src/main/resources/static/product/backend_productPut.html
@@ -135,8 +135,8 @@
               </button>
               <!-- 選單選項部分 -->
               <ul class="dropdown-menu dropdown-menu-dark text-center w-100">
-                <a class="dropdown-item" href="/ski/product/backend_productAdd.html">商品新增</a>
-                <a class="dropdown-item" href="/ski/product/backend_productPut.html">商品管理</a>
+                <a class="dropdown-item" href="../product/backend_productAdd.html">商品新增</a>
+                <a class="dropdown-item" href="../product/backend_productPut.html">商品管理</a>
               </ul>
             </div>
   
@@ -205,6 +205,7 @@
 
   <!-- 引入bootstrap套件JS -->
   <script src="../js/bootstrap.bundle.js"></script>
-  
-</body>
+      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.6/dayjs.min.js"></script>
+
+    </body>
 </html>
