--- a/demo/src/main/resources/static/product/frontend_shop.html
+++ b/demo/src/main/resources/static/product/frontend_shop.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- 引入bootstrap套件CSS -->
-<link rel="stylesheet" href="/ski/css/bootstrap.css" />
-<link rel="stylesheet" href="/ski/css/Product/frontend_shop.css" />
+<link rel="stylesheet" href="../css/bootstrap.css" />
+<link rel="stylesheet" href="../css/Product/frontend_shop.css" />
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -18,7 +18,7 @@
 		class="navbar navbar-expand-lg navbar-dark border border-dark bg-dark">
 		<div class="container">
 			<a class="navbar-brand" href="index.html"> <img
-				src="/ski/img/logo.png" alt="UI Kit" style="width: 50px" />
+				src="../img/logo.png" alt="UI Kit" style="width: 50px" />
 			</a>
 			<button class="navbar-toggler" type="button"
 				data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
@@ -41,7 +41,7 @@
 					</li>
 					<li class="nav-item me-3"><a class="nav-link" href="#">聊天室</a>
 					</li>
-					<li class="nav-item me-3"><a class="nav-link" href="http://localhost:8080/ski/product/frontend_shop.html">商城</a>
+					<li class="nav-item me-3"><a class="nav-link" href="http://localhost:8080/product/frontend_shop.html">商城</a>
 					</li>
 					<li class="nav-item me-3"><a class="nav-link" href="#">購物車</a>
 					</li>
@@ -95,17 +95,17 @@
 		<!-- 聊天室 -->
 		<button type="button"
 			class="sidetool_button btn btn-outline-black mb-1">
-			<img class="sidetool_icon" src="/ski/img/chat.png" alt="#" />
+			<img class="sidetool_icon" src="../img/chat.png" alt="#" />
 		</button>
 		<!-- 客服 -->
 		<button type="button"
 			class="sidetool_button btn btn-outline-black mb-1">
-			<img class="sidetool_icon" src="/ski/img/service.png" alt="#" />
+			<img class="sidetool_icon" src="../img/service.png" alt="#" />
 		</button>
 		<!-- 返回頂端 -->
 		<button type="button" id="return_top_button"
 			class="sidetool_button btn btn-outline-black mb-1">
-			<img class="sidetool_icon" src="/ski/img/up_arrow.png" alt="#" />
+			<img class="sidetool_icon" src="../img/up_arrow.png" alt="#" />
 		</button>
 	</div>
 	</div>
@@ -115,7 +115,7 @@
 			<div class="row">
 				<div class="col-1 d-flex align-items-center">
 					<a class="navbar-brand" href="index.html"> <img
-						src="/ski/img/logo.png" style="width: 50px" />
+						src="../img/logo.png" style="width: 50px" />
 					</a>
 				</div>
 				<div class="col-7 d-flex align-items-center">
@@ -140,7 +140,7 @@
 </body>
 
 <!-- 引入bootstrap套件JS -->
-<script src="/ski/js/Product/frontend_shop.js"></script>
-<script src="/ski/js/frontend_public.js"></script>
-<script src="/ski/js/bootstrap.bundle.js"></script>
+<script src="../js/Product/frontend_shop.js"></script>
+<script src="../js/frontend_public.js"></script>
+<script src="../js/bootstrap.bundle.js"></script>
 </html>
